fix: put shapes under their position to ensure no visual gap

--- a/src/css/shape.module.css
+++ b/src/css/shape.module.css
@@ -1,9 +1,9 @@
 .top {
-    top: 0;
+    top: -10px;
 }
 
 .bottom {
-    bottom: 0;
+    bottom: -10px;
     transform: rotate(180deg);
 }
 
